refactor: improve code style and documentation
- Update import statements for explicit imports
- Enhance JavaDoc comments for clarity and completeness
- Convert Chinese comments to English
- Add method documentation and parameter descriptions
- Remove unused main methods and test classes
- Standardize exception messages in English
- Improve resource handling with try-with-resources
- Deprecate legacy methods in favor of consistent naming